# aitr2021

./: .gitignore  README.md
ai_train_2021/: pyproject.toml  trainlog.csv
ai_train_2021/ai_train_2021/: csv_preprocess.py  sample_keras_gpu.py
ai_train_2021/data_set/sample/: sample.csv
ai_train_2021/tests/: test_ai_train_2021.py
gpu_check/: a.exp  hello_gpu.c
